--- a/dfdistill/basic/basic.ipynb
+++ b/dfdistill/basic/basic.ipynb
@@ -6,12 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import sys\n",
     "import math\n",
     "sys.path.append(\"..\")\n",
+    "\n",
     "\n",
     "import torch\n",
     "from torch import nn\n",
@@ -19,10 +17,13 @@
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from vanilla_distilation import distill\n",
+    "from algorythms.vanilla_distilation import distill\n",
     "from trainer import Trainer\n",
     "\n",
-    "device = \"cuda\""
+    "device = \"cuda\"\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -912,7 +913,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DFD",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -926,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
