--- a/dfdistill/basic/basic.ipynb
+++ b/dfdistill/basic/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from algorythms.vanilla_distilation import distill\n",
+    "from algorithms.vanilla_distilation import distill\n",
     "from trainer import Trainer\n",
     "\n",
     "device = \"cuda\"\n",
