--- a/dfdistill/basic/basic.ipynb
+++ b/dfdistill/basic/basic.ipynb
@@ -17,7 +17,7 @@
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from algorithms.vanilla_distilation import distill\n",
+    "from algorithms.vanilla_distillation import distill\n",
     "from trainer import Trainer\n",
     "\n",
     "device = \"cuda\"\n",
