--- a/dfdistill/basic/basic.ipynb
+++ b/dfdistill/basic/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +119,8 @@
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])\n",
     "\n",
-    "train_dataset = CIFAR100(root=\"./data\", train=True, download=True, transform=transform)\n",
-    "test_dataset = CIFAR100(root=\"./data\", train=False, download=True, transform=transform)"
+    "train_dataset = CIFAR100(root=\"../../data\", train=True, download=True, transform=transform)\n",
+    "test_dataset = CIFAR100(root=\"../../data\", train=False, download=True, transform=transform)"
    ]
   },
   {
