--- a/dfdistill/demo/demo.ipynb
+++ b/dfdistill/demo/demo.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8750bed9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m      3\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# from algorithms.deepinversion import distill_deep_inversion\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# from algorithms.vanilla_distillation import distill\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdistillation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m run_distillation\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import math\n",
@@ -6130,24 +6118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f186fc79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student_dfad = run_distillation(\n",
-    "    algorithm_name=\"dfad\",\n",
-    "    teacher=teacher,\n",
-    "    student=student_dfad,\n",
-    "    config={\n",
-    "        ...\n",
-    "    }\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73b84d34",
+   "id": "bbe084fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6167,13 +6138,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cc80740",
+   "id": "f186fc79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(\n",
-    "    get_cifar10_loader(data_path=\"../../data\", train=False, batch_size=train_config[\"batch_size\"]),\n",
-    "    model=student_stat_features\n",
+    "student_dfad = run_distillation(\n",
+    "    algorithm_name=\"dfad\",\n",
+    "    teacher=teacher,\n",
+    "    student=student_dfad,\n",
+    "    config={\n",
+    "        ...\n",
+    "    }\n",
     ")"
    ]
   },
@@ -6197,7 +6172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -6211,7 +6186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
