--- a/dfdistill/demo/demo.ipynb
+++ b/dfdistill/demo/demo.ipynb
@@ -2,29 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-   "id": "8750bed9",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m      3\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# from algorithms.deepinversion import distill_deep_inversion\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# from algorithms.vanilla_distillation import distill\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdistillation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m run_distillation\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
-     ]
-    }
-   ],
-=======
    "execution_count": 1,
    "id": "8750bed9",
    "metadata": {},
    "outputs": [],
->>>>>>> 61a4a415c82f93085ae1ac8b3c974df05e1591d4
    "source": [
     "import sys\n",
     "import math\n",
@@ -47,6 +28,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03235832",
+   "metadata": {},
+   "source": [
+    "### Init convolutional networks for teacher and students "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8eea1385",
@@ -64,8 +53,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9356aed",
+   "metadata": {},
+   "source": [
+    "### Teacher and reference student train config "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c9870acd",
    "metadata": {},
    "outputs": [],
@@ -81,6 +78,14 @@
     "    'verbose': False,\n",
     "    'dataset_size': 50000\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f149321",
+   "metadata": {},
+   "source": [
+    "### Train teacher "
    ]
   },
   {
@@ -181,6 +186,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef959c68",
+   "metadata": {},
+   "source": [
+    "### Get teacher accuracy for reference "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "b72fbc32",
@@ -216,6 +229,14 @@
     "    get_cifar10_loader(data_path=\"../../data\", train=False, batch_size=train_config[\"batch_size\"]),\n",
     "    model=teacher\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dac8e2fb",
+   "metadata": {},
+   "source": [
+    "### Same with refernce student (smaller network, just to see if distillation helps)"
    ]
   },
   {
@@ -510,6 +531,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01633b2b",
+   "metadata": {},
+   "source": [
+    "### Vanilla distillation that uses original dataset, just for reference "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "dd7367f3",
@@ -582,6 +611,14 @@
     "    get_cifar10_loader(data_path=\"../../data\", train=False, batch_size=train_config[\"batch_size\"]),\n",
     "    model=student_vanilla\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "226d2f06",
+   "metadata": {},
+   "source": [
+    "### Adaptive deep inversion algorithm"
    ]
   },
   {
@@ -6135,6 +6172,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e12c6786",
+   "metadata": {},
+   "source": [
+    "##### not impressive, but at least better than random guess. Algorithm is quite sensitive to hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92475e75",
+   "metadata": {},
+   "source": [
+    "### Data free distillation with statistical features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bbe084fe",
@@ -6157,18 +6210,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f186fc79",
+   "id": "7ada1222",
    "metadata": {},
    "outputs": [],
    "source": [
-    "student_dfad = run_distillation(\n",
-    "    algorithm_name=\"dfad\",\n",
-    "    teacher=teacher,\n",
-    "    student=student_dfad,\n",
-    "    config={\n",
-    "        ...\n",
-    "    }\n",
+    "trainer.evaluate(\n",
+    "    get_cifar10_loader(data_path=\"../../data\", train=False, batch_size=train_config[\"batch_size\"]),\n",
+    "    model=student_stat_features\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d032f595",
+   "metadata": {},
+   "source": [
+    "### Data free distillation with spectral features"
    ]
   },
   {
@@ -6179,19 +6236,70 @@
    "outputs": [],
    "source": [
     "student_spec_features = run_distillation(\n",
-    "    algorithm_name=\"?????\",\n",
+    "    algorithm_name=\"?????\",#TODO\n",
     "    teacher=teacher,\n",
     "    student=student_spec_features,\n",
     "    config={\n",
-    "        ...\n",
+    "        #TODO\n",
     "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09c11886",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.evaluate(\n",
+    "    get_cifar10_loader(data_path=\"../../data\", train=False, batch_size=train_config[\"batch_size\"]),\n",
+    "    model=student_spec_features\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c6d094d",
+   "metadata": {},
+   "source": [
+    "### Data free adversarial distillation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f186fc79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_dfad = run_distillation(\n",
+    "    algorithm_name=\"dfad\",\n",
+    "    teacher=teacher,\n",
+    "    student=student_dfad,\n",
+    "    config={\n",
+    "        #TODO\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "480f9098",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.evaluate(\n",
+    "    get_cifar10_loader(data_path=\"../../data\", train=False, batch_size=train_config[\"batch_size\"]),\n",
+    "    model=student_dfad\n",
     ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "DL",
    "language": "python",
    "name": "python3"
   },
@@ -6205,7 +6313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
